Órganization of the notebooks

--- a/Notebooks/LinearRegression/Linear Regression from Scratch .ipynb
+++ b/Notebooks/LinearRegression/Linear Regression from Scratch .ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4  5.21  28.7  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "4  394.12   5.21  28.7  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
     "#### Prediction and Cost Function\n",
     "Lets start by making the fuction for the prediction and the Cost Function.\n",
     "\n",
-    "We are going to divide the costFunction by 2 to make the mathemathic easier."
+    "We are going to divide the Cost Function by 2 to make the mathemathic easier."
    ]
   },
   {
@@ -846,13 +846,6 @@
    "source": [
     "gradientDescentLinearRegression()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
